# economic-models

./: .env.example  .eslintrc.json  .gitignore  CONTRIBUTING.md  PROJECT_SUMMARY.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
apps/api/: README.md  package.json  pyproject.toml
apps/api/src/: main.py
apps/api/src/routes/: islm.py  solow.py
apps/api/src/schemas/: islm.py  solow.py
apps/api/tests/: test_islm_routes.py  test_solow_routes.py
apps/web/: README.md  next.config.js  package.json  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/islm/: page.tsx
apps/web/src/app/solow/: page.tsx
docs/: ARCHITECTURE.md
scripts/: dev.sh
